--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.11.1",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
+    "multer": "^0.1.7",
     "serve-favicon": "~2.2.0"
   }
 }
